Test mast be passed successful.

--- a/test/data/channel_info/chat_1.html
+++ b/test/data/channel_info/chat_1.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta property="og:title" content="Colorado Furries Entry Group">
-    <meta property="og:image" content="https://cdn1.telesco.pe/file/tcwKspVPxMyQYIthye0LhWIwBtC-2US3VS9C04eNGICivwVYN09eFUI7-wt-giP6A65WcgzpqRPwHIEP4fTWzpH6yOVjIzgLkUEWkKkJSKg7x8NF4Nb1TwhyGZvnbGNfatYmfSC6HODCi7-nNVeIQOWH2FUCaQOVA29EHAJQhvYfAGuMwekNnbJAUrbY5IQhn1XbPgn0C054K0EBuSOkAoWd4I9Vw1RfhcPDtcpQ1D8ke7fgrBhPnCUad_qKFm1cjDQsF2t7tynfLwe6KgemEA3l_YruRKwf25jLKfMkD_pVkB9LDZM6pB2Frqc3DS49GBVwODun0umvml_miryRqg.jpg">
+    <meta property="og:image" content="https://cdn1.telesco.pe/file/Bg0x96TvnbTanzesn1vnbXOwLRf0Z03l3lPO5DA2eFWbokXp-7bB2sp0Kaa8Pgw-oH4wHiM8GBxoLSm0oXa8PELnNakndJ6P-SgsqdOK0CV8hPPe2mTWH87pnamuQDxACGVlx2WOXFecKTqFvSYDX5RbRJqXj8E_xUYVkCSwtsTVb25tDQg0cXoxmqIVoHSVVYmJClp_RsmbgL9fblBK-_wqSKUNNcmDKXw4COZM_BS2QJVCOV-YU96xuSH8B1F5HW5Dvhrag5wMLZojg2SmfZxhiLo5kvPI_Y8gfzZTmLE68w_2XBhrQM2uVW-bHFsMp-zeH8TbI07qVg1XbSN8mw.jpg">
     <meta property="og:site_name" content="Telegram">
     <meta property="og:description" content="This is the place to join the main Colorado Furries group, we&#39;ll give you a link via pm as soon as we verify you&#39;re not just some spam bot :3">
 
     <meta property="twitter:title" content="Colorado Furries Entry Group">
-    <meta property="twitter:image" content="https://cdn1.telesco.pe/file/tcwKspVPxMyQYIthye0LhWIwBtC-2US3VS9C04eNGICivwVYN09eFUI7-wt-giP6A65WcgzpqRPwHIEP4fTWzpH6yOVjIzgLkUEWkKkJSKg7x8NF4Nb1TwhyGZvnbGNfatYmfSC6HODCi7-nNVeIQOWH2FUCaQOVA29EHAJQhvYfAGuMwekNnbJAUrbY5IQhn1XbPgn0C054K0EBuSOkAoWd4I9Vw1RfhcPDtcpQ1D8ke7fgrBhPnCUad_qKFm1cjDQsF2t7tynfLwe6KgemEA3l_YruRKwf25jLKfMkD_pVkB9LDZM6pB2Frqc3DS49GBVwODun0umvml_miryRqg.jpg">
+    <meta property="twitter:image" content="https://cdn1.telesco.pe/file/Bg0x96TvnbTanzesn1vnbXOwLRf0Z03l3lPO5DA2eFWbokXp-7bB2sp0Kaa8Pgw-oH4wHiM8GBxoLSm0oXa8PELnNakndJ6P-SgsqdOK0CV8hPPe2mTWH87pnamuQDxACGVlx2WOXFecKTqFvSYDX5RbRJqXj8E_xUYVkCSwtsTVb25tDQg0cXoxmqIVoHSVVYmJClp_RsmbgL9fblBK-_wqSKUNNcmDKXw4COZM_BS2QJVCOV-YU96xuSH8B1F5HW5Dvhrag5wMLZojg2SmfZxhiLo5kvPI_Y8gfzZTmLE68w_2XBhrQM2uVW-bHFsMp-zeH8TbI07qVg1XbSN8mw.jpg">
     <meta property="twitter:site" content="@Telegram">
 
     <meta property="al:ios:app_store_id" content="686449807">
@@ -40,9 +40,9 @@
     <link rel="shortcut icon" href="//telegram.org/favicon.ico?3" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet" type="text/css">
     <!--link href="/css/myriad.css" rel="stylesheet"-->
-    <link href="//telegram.org/css/bootstrap.min.css?2" rel="stylesheet">
-    <link href="//telegram.org/css/telegram.css?154" rel="stylesheet" media="screen">
-    <script type="text/javascript" src="https://ff.kis.v2.scr.kaspersky-labs.com/DA6E9720-FB71-FA41-A170-7CBEB7A775A6/main.js" charset="UTF-8"></script></head>
+    <link href="//telegram.org/css/bootstrap.min.css?3" rel="stylesheet">
+    <link href="//telegram.org/css/telegram.css?162" rel="stylesheet" media="screen">
+    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js" charset="UTF-8"></script></head>
 <body>
 
 <div class="tgme_page_wrap">
@@ -53,22 +53,23 @@
             </a>
         </div>
     </div>
-    <a class="tgme_head_dl_button" href="//telegram.org/dl?tme=b8ed61b53088f8207b_11910114581366605279">
+    <a class="tgme_head_dl_button" href="//telegram.org/dl?tme=b7390ff5cf88dff735_11065899372981680202">
         Don't have <strong>Telegram</strong> yet? Try it now!<i class="tgme_icon_arrow"></i>
     </a>
     <div class="tgme_page tgme_page_post">
         <div class="tgme_page_photo">
-            <a href="tg://resolve?domain=ColoradoFurries"><img class="tgme_page_photo_image" src="https://cdn1.telesco.pe/file/tcwKspVPxMyQYIthye0LhWIwBtC-2US3VS9C04eNGICivwVYN09eFUI7-wt-giP6A65WcgzpqRPwHIEP4fTWzpH6yOVjIzgLkUEWkKkJSKg7x8NF4Nb1TwhyGZvnbGNfatYmfSC6HODCi7-nNVeIQOWH2FUCaQOVA29EHAJQhvYfAGuMwekNnbJAUrbY5IQhn1XbPgn0C054K0EBuSOkAoWd4I9Vw1RfhcPDtcpQ1D8ke7fgrBhPnCUad_qKFm1cjDQsF2t7tynfLwe6KgemEA3l_YruRKwf25jLKfMkD_pVkB9LDZM6pB2Frqc3DS49GBVwODun0umvml_miryRqg.jpg"></a>
+            <a href="tg://resolve?domain=ColoradoFurries"><img class="tgme_page_photo_image" src="https://cdn1.telesco.pe/file/Bg0x96TvnbTanzesn1vnbXOwLRf0Z03l3lPO5DA2eFWbokXp-7bB2sp0Kaa8Pgw-oH4wHiM8GBxoLSm0oXa8PELnNakndJ6P-SgsqdOK0CV8hPPe2mTWH87pnamuQDxACGVlx2WOXFecKTqFvSYDX5RbRJqXj8E_xUYVkCSwtsTVb25tDQg0cXoxmqIVoHSVVYmJClp_RsmbgL9fblBK-_wqSKUNNcmDKXw4COZM_BS2QJVCOV-YU96xuSH8B1F5HW5Dvhrag5wMLZojg2SmfZxhiLo5kvPI_Y8gfzZTmLE68w_2XBhrQM2uVW-bHFsMp-zeH8TbI07qVg1XbSN8mw.jpg"></a>
         </div>
-        <div class="tgme_page_title">
+        <div class="tgme_page_title" dir="auto">
             Colorado Furries Entry Group
         </div>
-        <div class="tgme_page_extra">13 members</div>
-        <div class="tgme_page_description">This is the place to join the main Colorado Furries group, we&#39;ll give you a link via pm as soon as we verify you&#39;re not just some spam bot :3</div>
+        <div class="tgme_page_extra">8 members, 2 online</div>
+        <div class="tgme_page_description" dir="auto">This is the place to join the main Colorado Furries group, we&#39;ll give you a link via pm as soon as we verify you&#39;re not just some spam bot :3</div>
         <div class="tgme_page_action">
-            <a class="tgme_action_button_new" href="tg://resolve?domain=ColoradoFurries">View Group</a>
+            <a class="tgme_action_button_new" href="tg://resolve?domain=ColoradoFurries">View in Telegram</a>
         </div>
         <!-- WEBOGRAM_BTN -->
+
         <div class="tgme_page_additional">
             If you have <strong>Telegram</strong>, you can view and join <br><strong>Colorado Furries Entry Group</strong> right away.
         </div>
@@ -80,7 +81,7 @@
 <script type="text/javascript">
 
     var protoUrl = "tg:\/\/resolve?domain=ColoradoFurries";
-    if (true) {
+    if (false) {
         var iframeContEl = document.getElementById('tgme_frame_cont') || document.body;
         var iframeEl = document.createElement('iframe');
         iframeContEl.appendChild(iframeEl);
@@ -94,7 +95,7 @@
         if (iframeEl !== null) {
             iframeEl.src = protoUrl;
         }
-        !true && setTimeout(function() {
+        !false && setTimeout(function() {
             if (!pageHidden) {
                 window.location = protoUrl;
             }
@@ -118,4 +119,4 @@ ga('set', 'anonymizeIp', true);
 ga('send', 'pageview');</script>
 </body>
 </html>
-<!-- page generated in 19.75ms -->
+<!-- page generated in 11.65ms -->
